make TagOrCycleItemStackTransfer able to have a list of tags